--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,49 @@ body {
 .cell.complete .overlay {
     opacity: .6;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    padding-top: 6.25rem;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, .4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: -15% 0 0 -35%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 2rem;
+    border: 1px solid #888;
+    width: 70%;
+    height: 30%;
+}
+
+.modal-content p {
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.close {
+    color: #aaa;
+    position: absolute;
+    top: 1rem;
+    right: 1.3rem;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
